VTK - fix scrollbar placing (FF, Chrome++)

--- a/src/main/resources/web/themes/default/default.css
+++ b/src/main/resources/web/themes/default/default.css
@@ -914,7 +914,7 @@ ul.list-menu.resourceMenuRight p span,
 }
 
 #TB_ajaxContent {
-  padding: 2px 30px 30px 30px !important;
+  padding: 2px 0 30px 30px !important;
 }
 
 /* ^ Thickbox mod */
